--- a/RogueLikeVS/RogueLikeVS.vcxproj
+++ b/RogueLikeVS/RogueLikeVS.vcxproj
@@ -145,12 +145,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\character.h" />
     <ClInclude Include="..\map.h" />
     <ClInclude Include="..\OS_Functions.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\character.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\map.cpp" />
+    <ClCompile Include="OS_Functions.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
