Player Movement Update
Changed Movement to control by arrow keys.
added collision with environment objects e.g. wall tile

--- a/RogueLikeVS/RogueLikeVS.vcxproj
+++ b/RogueLikeVS/RogueLikeVS.vcxproj
@@ -153,7 +153,7 @@
     <ClCompile Include="..\character.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\map.cpp" />
-    <ClCompile Include="OS_Functions.cpp" />
+    <ClCompile Include="..\OS_Functions.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
