--- a/RogueLikeVS/RogueLikeVS.vcxproj
+++ b/RogueLikeVS/RogueLikeVS.vcxproj
@@ -146,14 +146,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\character.h" />
+    <ClInclude Include="..\enemy.h" />
     <ClInclude Include="..\map.h" />
     <ClInclude Include="..\OS_Functions.h" />
+    <ClInclude Include="..\player.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\character.cpp" />
+    <ClCompile Include="..\enemy.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\map.cpp" />
     <ClCompile Include="..\OS_Functions.cpp" />
+    <ClCompile Include="..\player.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
