--- a/RogueLikeVS/RogueLikeVS.vcxproj.filters
+++ b/RogueLikeVS/RogueLikeVS.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="..\character.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\enemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -43,6 +49,12 @@
     </ClCompile>
     <ClCompile Include="..\OS_Functions.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\enemy.cpp">
+      <Filter>Source Files\Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\player.cpp">
+      <Filter>Source Files\Classes</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
